navigation bar is complete with html and css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/css/style.css" />
+    <!-- font-awesome key  -->
+    <script
+      src="https://kit.fontawesome.com/91df599e2c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Resources.Tibet.Dev</title>
   </head>
   <body>
+    <!-- Navigation menu bar -->
+    <nav>
+      <div class="logo">
+        <h4>Resources.Tibet.Dev</h4>
+      </div>
+      <div class="right">
+        <i class="fa-solid fa-bars menuButton"></i>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Websites</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     <!-- JS -->
     <script src="./script/script.js"></script>
   </body>
