added navbar animation

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
   <body>
     <!-- Navigation menu bar -->
     <nav>
-      <div class="logo">
-        <h4>Resources.Tibet.Dev</h4>
+      <div class="navContainer">
+        <div class="logo">
+          <h4>Resources.Tibet.Dev</h4>
+        </div>
+        <div class="right">
+          <i class="fa-solid fa-bars menuButton"></i>
+          <ul class="navMenu">
+            <li class="navItem"><a href="#" class="navLink">Home</a></li>
+            <li class="navItem"><a href="#" class="navLink">About us</a></li>
+            <li class="navItem"><a href="#" class="navLink">Websites</a></li>
+            <li class="navItem"><a href="#" class="navLink">Contact</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="right">
-        <i class="fa-solid fa-bars menuButton"></i>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Websites</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
+      <div class="loading"></div>
     </nav>
     <!-- JS -->
     <script src="./script/script.js"></script>
