just test for header section that with svh

--- a/index.html
+++ b/index.html
@@ -30,6 +30,32 @@
       </div>
       <div class="loading"></div>
     </nav>
+
+    <!-- for test only  -->
+    <header>
+      <div class="titleBar">
+        <h1>Hello world</h1>
+      </div>
+      <div class="importantInfo">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, iure
+          vitae tempore ducimus dolore quod ullam fugiat ab inventore
+          voluptates.
+        </p>
+      </div>
+    </header>
+    <header>
+      <div class="titleBar">
+        <h1>Hello world</h1>
+      </div>
+      <div class="importantInfo">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, iure
+          vitae tempore ducimus dolore quod ullam fugiat ab inventore
+          voluptates.
+        </p>
+      </div>
+    </header>
     <!-- JS -->
     <script src="./script/script.js"></script>
   </body>
